--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,12 @@
     <uses-permission android:name="Settings.ACTION_MANAGE_OVERLAY_PERMISSION" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+    <intent-filter>
+        <action android:name="android.intent.action.PROCESS_TEXT" />
+
+        <data android:mimeType="text/plain" />
+    </intent-filter>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,7 +36,11 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activities.TranslateActivity"></activity>
+        <activity android:name=".activities.TranslateActivity" />
+
+        <activity android:name=".activities.DialogActivity"
+       android:theme="@android:style/Theme.Holo.Dialog"/>
+
     </application>
 
 </manifest>
